fix: comment card and textfield border radius; header and questioncard z-index

--- a/src/components/comments/AddCommentTextField.module.css
+++ b/src/components/comments/AddCommentTextField.module.css
@@ -1,4 +1,4 @@
 .TextField {
   background-color: #f1f2f5;
-  border-radius: 16px;
+  border-radius: 12px;
 }
