--- a/src/components/comments/CommentCard.module.css
+++ b/src/components/comments/CommentCard.module.css
@@ -7,7 +7,7 @@
 .Comment {
   background-color: #f1f2f5;
   word-wrap: break-word;
-  border-radius: 16px;
+  border-radius: 12px;
   font-size: 1.2rem;
   padding: 1rem;
 }
