--- a/src/components/questions/DetailedQuestionCard.module.css
+++ b/src/components/questions/DetailedQuestionCard.module.css
@@ -1,9 +1,10 @@
 .Box {
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
   display: flex;
   flex-direction: column;
+  z-index: 2;
   width: calc((100% - 100px) * 0.3);
   height: 100vh;
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
